--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@capacitor-community/text-to-speech": "^6.0.0",
     "@capacitor/android": "^7.3.0",
     "@capacitor/core": "^7.3.0",
+    "@capacitor/preferences": "^7.0.1",
     "@google/genai": "^1.4.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
